# slimbus

./: Cargo.toml  README.md
examples/: calloop.rs  file_dialog.rs  simple.rs
slimbus/: Cargo.toml
slimbus/src/: error.rs  fdo.rs  guid.rs  lib.rs  names.rs  utils.rs
slimbus/src/address/: mod.rs
slimbus/src/address/transport/: mod.rs  tcp.rs  unix.rs
slimbus/src/connection/: handshake.rs  mod.rs  socket.rs  socket_reader.rs
slimbus/src/connection/socket/: mod.rs  tcp.rs  unix.rs
slimbus/src/message/: body.rs  builder.rs  field.rs  field_code.rs  fields.rs  header.rs  mod.rs
