[package]
name = "slimbus"
version = "4.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[features]
default = []
uuid = ["zvariant/uuid"]
url = ["zvariant/url"]
time = ["zvariant/time"]
chrono = ["zvariant/chrono"]
# Enables ser/de of `Option<T>` as an array of 0 or 1 elements.
option-as-array = ["zvariant/option-as-array"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.9"
zvariant = { version = "4.0.0", default-features = false, features = [
  "enumflags2",
] }
zbus_names = { version = "3.0" }
enumflags2 = { version = "0.7.7", features = ["serde"] }
hex = "0.4.3"
rand = "0.8.5"
log = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = [
  "socket",
  "uio",
] }
