[package]
name = "slimbus"
version = "4.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[features]
default = []
uuid = ["zvariant/uuid"]
url = ["zvariant/url"]
time = ["zvariant/time"]
chrono = ["zvariant/chrono"]
# Enables ser/de of `Option<T>` as an array of 0 or 1 elements.
option-as-array = ["zvariant/option-as-array"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zvariant = { version = "5.4", default-features = false, features = [
  "enumflags2",
] }
enumflags2 = { version = "0.7", features = ["serde"] }
log = "0.4"
rustix = { version = "1.0", features = ["event", "fs", "process", "net"] }

[target.'cfg(any(target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
nix = { version = "0.29", default-features = false, features = [
  "socket",
  "uio",
] }
